--- a/vue-charts-framework/package.json
+++ b/vue-charts-framework/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-charts-2",
+  "name": "vue-charts-framework",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,15 +10,12 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-pwa": "^3.8.0",
     "@vue/cli-plugin-unit-mocha": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
@@ -27,10 +24,19 @@
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "fscreen": "^1.0.2",
+    "lint-staged": "^8.1.5",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "vue-ionicons": "^3.0.4",
     "vue-template-compiler": "^2.6.10"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
